--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -13,10 +13,10 @@ body {
    width: 80%;
    height: 14vh;
    display: grid;
-  margin: auto;
-  backdrop-filter: blur(20px);
+   margin: auto;
+   backdrop-filter: blur(1rem);
 
-  align-items: center;
+   align-items: center;
    grid-template-rows: 1fr;
    grid-template-columns: 1fr 4fr 1fr;
 
@@ -27,28 +27,46 @@ body {
    grid-row: 1 / 2;
    grid-column: 1 / 2;
    justify-self: center;
-  
+
 
 }
 
 .coName {
    border: 1px solid black;
-   font-size: 3.5rem;
+   font-size: 4rem;
    grid-row: 1 / 2;
    grid-column: 2 / 3;
    justify-self: center;
    color: white;
-font-weight: 600;
-margin: 0;
+   font-weight: 600;
+   margin: 0;
+   text-shadow: 5px 5px 10px black;
 }
 
 .contact {
+   width: 50%;
    border: 1px solid black;
    grid-row: 1 / 2;
    grid-column: 3 / 4;
+   font-size: 1.2rem;
+   color: lightgrey;
+   text-decoration: none;
+
 }
 
- .main-container {
+contact:hover {
+   color: rgb(134, 133, 133);
+
+}
+
+.light {
+   width: 48%;
+   height: 1vh;
+   background-color: aqua;
+   border-radius: 25px;
+}
+
+.main-container {
    width: 100%;
    height: 75vh;
    border: 1px solid black;
@@ -64,11 +82,11 @@ margin: 0;
 
 }  */
 
-.jointRules .p{
+.jointRules .p {
    cursor: pointer;
 }
 
-.jointRules .p:hover{
+.jointRules .p:hover {
    color: rgb(134, 133, 133);
 }
 
@@ -77,7 +95,7 @@ margin: 0;
    grid-row: 1 / 2;
    grid-column: 1 / 2;
    display: grid;
-   grid-template-rows: 1fr 2fr;
+   grid-template-rows: 1fr 1fr;
    grid-template-columns: 1fr;
 
 
@@ -97,6 +115,7 @@ margin: 0;
    grid-template-rows: 1fr 1fr;
    grid-template-columns: 1fr;
 }
+
 .financialPractices1 {
    border: 1px solid black;
    grid-row: 1 / 2;
@@ -126,7 +145,7 @@ margin: 0;
    grid-column: 1 / 2;
    padding: 4%;
    text-align: justify;
-   line-height: 1.5;
+   line-height: 1.3;
    color: lightgrey;
 }
 
@@ -137,11 +156,10 @@ margin: 0;
    grid-column: 1 / 2;
    color: lightgrey;
    text-align: justify;
-   line-height: 1.5;
+   line-height: 1.3;
 }
 
-.createdBy{
+.createdBy {
    font-size: 0.8rem;
    color: rgb(32, 31, 31);
 }
-
