--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -14,8 +14,8 @@ body {
    height: 14vh;
    display: grid;
    margin: auto;
-   backdrop-filter: blur(1rem);
-
+   
+   justify-content: space-between;
    align-items: center;
    grid-template-rows: 1fr;
    grid-template-columns: 1fr 4fr 1fr;
@@ -23,10 +23,12 @@ body {
 }
 
 .logo {
-   border: 1px solid black;
+   border: 2px solid black;
    grid-row: 1 / 2;
    grid-column: 1 / 2;
    justify-self: center;
+   background-color: white;
+
 
 
 }
@@ -43,32 +45,36 @@ body {
    text-shadow: 5px 5px 10px black;
 }
 
+nav{
+   width: 60%;
+   justify-self: right;
+}
+
 .contact {
-   width: 50%;
-   border: 1px solid black;
+   width: 100%;
+   /* border: 1px solid black; */
    grid-row: 1 / 2;
    grid-column: 3 / 4;
    font-size: 1.2rem;
-   color: lightgrey;
+   color: white;
    text-decoration: none;
-
-}
-
-contact:hover {
-   color: rgb(134, 133, 133);
-
-}
-
-.light {
-   width: 48%;
-   height: 1vh;
-   background-color: aqua;
+   padding: 5%;
+   background-color: rgb(36, 46, 37);
    border-radius: 25px;
+   opacity: 0.7;
+   border: 2px dashed rgb(21, 21, 49);
+
+
+}
+
+.contact:hover {
+   color: rgb(158, 72, 72);
+   border: 2px dashed rgb(158, 72, 72);;
 }
 
 .main-container {
    width: 100%;
-   height: 75vh;
+   height: 86vh;
    border: 1px solid black;
    display: grid;
    grid-template-rows: 1fr;
@@ -76,13 +82,9 @@ contact:hover {
 
 }
 
-/* .jointRules {
- 
-
-
-}  */
-
 .jointRules .p {
+   font-size: 1.2rem;
+   line-height: 2;
    cursor: pointer;
 }
 
@@ -92,7 +94,7 @@ contact:hover {
 
 .divider1 {
    border: 1px solid black;
-   grid-row: 1 / 2;
+   grid-row: 1 / 3;
    grid-column: 1 / 2;
    display: grid;
    grid-template-rows: 1fr 1fr;
@@ -103,13 +105,13 @@ contact:hover {
 
 .divider2 {
    border: 1px solid black;
-   grid-row: 1 / 3;
+   grid-row: 1 / 2;
    grid-column: 2 / 3;
 }
 
 .divider3 {
    border: 1px solid black;
-   grid-row: 1 / 2;
+   grid-row: 1 / 3;
    grid-column: 3 / 4;
    display: grid;
    grid-template-rows: 1fr 1fr;
@@ -124,6 +126,7 @@ contact:hover {
    align-self: center;
    font-size: 1.2rem;
    color: lightgrey;
+   height: 33vh;
 }
 
 .financialPractices2 {
@@ -135,6 +138,7 @@ contact:hover {
    font-size: 1.2rem;
    color: lightgrey;
    text-align: right;
+   height: 33vh;
 
 }
 
@@ -147,6 +151,14 @@ contact:hover {
    text-align: justify;
    line-height: 1.3;
    color: lightgrey;
+   height: 66vh;
+}
+
+.companyOwner{
+   position:absolute;
+   width: 12%;
+   
+   border-radius: 5px;
 }
 
 .explain2 {
@@ -158,9 +170,12 @@ contact:hover {
    text-align: justify;
    line-height: 1.3;
    padding: 4%;
+   height: 66vh;
 }
 
 .createdBy {
-   font-size: 0.8rem;
+   grid-row: 2 / 3;
+   grid-column: 2 / 3;
+   font-size: 0.6rem;
    color: rgb(32, 31, 31);
 }
