--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -5,44 +5,74 @@ body {
    width: 100%;
    height: 100vh;
    font-family: 'Work Sans', sans-serif;
-   background-image: url("../images/blueAbstractBackground.png");
+   background-image: linear-gradient(to bottom right, black, lightblue);
 }
 
-.spacer{
-   width: 50%;
+.spacer {
+   width: 60%;
    height: 4vh;
    margin: auto;
 }
 
 header {
-   width: 50%;
-   height: 12%;
+   width: 60%;
+   height: 10vh;
    margin: auto;
-   background-color: rgb(173, 216, 230);
-   box-shadow: 5px 5px rgb(15, 82, 186);
+   background-color: rgb(103, 116, 116);
+   box-shadow: 5px 5px rgb(128, 152, 188);
    display: flex;
    justify-content: space-around;
    align-items: center;
-   border-top: 2px solid lightgray;
-   border-left: 2px solid lightgray;
+
    border-radius: 5px;
+}
+
+.logo {
+   width: 5%;
+   height: 85%;
 }
 
 .coName {
    font-size: 3rem;
    font-weight: 600;
    font-style: normal;
-   color: rgb(15, 82, 186);
+   color: lightgrey;
 }
 
-main{
+main {
    display: flex;
- 
+   width: 100vw;
+   height: 84vh;
 }
 
-.openingTxtSection{
-   width: 50%;
-   padding: 4% 4% 0% 4%;
+.seniorAgePhoto {
+   /* padding-top: 4%; */
+   border: 2px solid lightgray;
+   width: 100%;
+   border-radius: 5px;
+
+}
+
+.openingTxtSection {
+   padding-top: 4%;
+   width: 40vw;
+   height: 36vw;
+   margin-left: 5vw;
+   margin-right: 10vw;
+}
+
+.servicesSection {
+   padding-top: 7%;
+   /* border: 2px solid black; */
+   width: 40vw;
+   height: 36vw;
+   /* height: 75vh; */
+   margin-right: 5vw;
+
+}
+
+.openingTxt {
+   /* padding: 4% 4% 0% 4%; */
    color: lightgray;
    font-size: 1rem;
    font-weight: 600;
@@ -50,36 +80,145 @@ main{
    line-height: 1.8;
 }
 
-.servicesSection {
-border: 2px solid black;
-width: 50%;
-height: 50vh;
-padding-top: 4%;
-}
-
 .services {
-   width: 15%;
-   height: 20%;
-   background-color: rgb(173, 216, 230);
-   box-shadow: 5px 5px rgb(15, 82, 186);
-   color: rgb(15, 82, 186);
-   font-size: 1.5rem;
-   font-weight: 600;
-   font-style: normal;
+   text-align: center;
+   width: 8vw;
+   height: 4vw;
+   /* background-color: rgb(173, 216, 230); */
+   box-shadow: 5px 5px rgb(128, 152, 188);
+   color: lightgrey;
+   font-size: 1rem;
+   font-weight: 500;
+   cursor: pointer;
 }
 
-.education{
-   background-color: rgb(173, 200, 230);
+.explainHolder {
+   display: grid;
+   grid-template-rows: 1fr 2fr 2fr;
+   grid-template-columns: 1fr 1fr 1fr 1fr;
+   /* background-color: rgb(101, 138, 150); */
+   background-image: linear-gradient(to bottom right, black, lightblue);
+   height: 500px;
+   width: 100%;
+   border-radius: 5px;
+   align-self: center;
 }
 
-.personal{
-   background-color: rgb(173, 216, 230);
+.education {
+   grid-row: 1 / 2;
+   grid-column: 1 / 2;
+   background-color: #8ea1cf;
+   justify-self: center;
+   align-self: center;
+
 }
 
-.investments{
-   background-color: rgb(147, 197, 226);
+.education:hover {
+   background-color: #96abdc;
 }
 
-.retirement{
-   background-color: rgb(172, 179, 230);
+.personal {
+   grid-row: 1 / 2;
+   grid-column: 2 / 3;
+   background-color: #65968D;
+   justify-self: center;
+   align-self: center;
+}
+
+.personal:hover {
+   background-color: #6ea49a;
+}
+
+.investments {
+   grid-row: 1 / 2;
+   grid-column: 3 / 4;
+   background-color: #657096;
+   justify-self: center;
+   align-self: center;
+}
+
+.investments:hover {
+   background-color: #7380ad;
+}
+
+.retirement {
+   grid-row: 1 / 2;
+   grid-column: 4 / 5;
+   background-color: #6d6b8e;
+   justify-self: center;
+   align-self: center;
+}
+
+.retirement:hover {
+   background-color: #7e7ca4;
+}
+
+.explain {
+   grid-row: 2 / 3;
+   grid-column: 1 / 5;
+   margin-left: 2%;
+   margin-right: 2%;
+
+   background-color: rgb(103, 116, 116);
+   /* justify-self: stretch; */
+   box-shadow: 5px 5px rgb(128, 152, 188);
+   padding-left: 2%;
+   padding-right: 2%;
+   border-radius: 5px;
+   height: 100%;
+   margin-top: 3%;
+
+
+}
+
+.explainTxt {
+   text-align: justify;
+   font-size: 1rem;
+   font-weight: 7;
+   text-align: justify;
+   line-height: 1.8;
+   color: lightgray;
+   /* opacity: 0; */
+   transition: opacity 2s;
+}
+
+.download {
+   grid-row: 3 / 4;
+   grid-column: 1 / 3;
+
+}
+
+.contact {
+   grid-row: 3 / 4;
+   grid-column: 3 / 5;
+   background-color: rgb(128, 152, 188);
+   
+}
+
+.share {
+   font-size: 1rem;
+   font-weight: 700; 
+   font-style: bold;
+   color: lightgray;
+   cursor: pointer;
+   border-radius: 5px;
+   
+   justify-self: center;
+   align-self: center;
+   width: 80%;
+   /* height: 80%; */
+   background-color: rgb(115, 136, 169);
+   text-decoration: none;
+   padding: 25px 15px;
+   text-align: center;
+}
+
+
+
+.download:hover {
+   background-color: #8294be;
+}
+
+.contact:hover {
+   background-color: #8294be;
 }
